# lili

./: .gitignore  CImg.h  CMakeLists.txt  README.md  acamera.cpp  acamera.h  anytojpg-retired.cpp  anytojpg-retired.h  anytojpg.cpp  anytojpg.h  avlibrtsp.cpp  avlibrtsp.h  build_lili.sh  camevents.cpp  camevents.h  cbconf.cpp  cbconf.h  deploymulti.sh  encoder.h  encrypter.cpp  encrypter.h  fxxtojpg.cpp  fxxtojpg.h  httpcam.cpp  httpcam.h  imgsink.cpp  imgsink.h  jencoder.cpp  jencoder.h  jpeg_buffer.h  jpeger.cpp  jpeger.h  jpeghttpcam.cpp  jpeghttpcam.h  lc.sh  lilitypes.h  liveimage.konf-demo.txt  liveimage.sample_konf  localcam.cpp  localcam.h  (+37 more)
arm64jpeg/: jpeglib.h
build-liveimage_srv-LINUX_DEFAULT-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  qtcsettings.cmake
build-liveimage_srv-LINUX_DEFAULT-Debug/.cmake/api/v1/reply/: cache-v2-4be7ddfb0b2bf0fd07b2.json  cmakeFiles-v1-ac283f39136d801fb695.json  cmakeFiles-v1-d910f44e5ccaef49b16f.json  codemodel-v2-04725fff8cccff005948.json  index-2023-07-11T21-25-03-0912.json  index-2023-07-14T01-25-12-0520.json  (+1 more)
build-liveimagesrv-LINUX_DEFAULT-Debug/: liveimagesrv
build-liveimagesrv-LINUX_DEFAULT-Release/: liveimagesrv
docs/: dia1.dia  r-pi-rtsp-server.txt
liveimage_srv/: .gitignore  .pool.cpp.swp  CMakeCache.txt.prev  CMakeLists.txt  camsock.h  cliqueue.cpp  cliqueue.h  clirtspsock.h  config.h  encrypter.h  fpipe.cpp  fpipe.h  liveimage_srv  liveimage_srv.conf  liveimage_srv.conf_example  liveimage_srv.conf_sample  liveimagesrv.pro  logfile.h  logger.cpp  logger.h  main.cpp  main.h  mk_mov.sh  oneproc.cpp  oneproc.h  os.h  pool.cpp  pool.h  rawsock.cpp  rawsock.h  requestparser.h  sheller.cpp  sheller.h  sock.cpp  sock.h  tcpcamcli.cpp  tcpcamcli.h  tcpjpgmpartcam.cpp  tcpjpgmpartcam.h  tcplibav.cpp  (+7 more)
liveimage_srv/.cmake/api/v1/reply/: cache-v2-9a77721796bb5339b869.json  cmakeFiles-v1-ec295d901a9edd952333.json  codemodel-v2-196cc98b56b03854e9e3.json  index-2022-06-20T21-13-58-0684.json  target-liveimage_srv-01390913aa357ddaf627.json
liveimage_srv/parked/: framequeue.cpp  framequeue.h  videoframe.cpp  videoframe.h
qt_prj/: qt_liveimage.pro  qt_liveimage.pro.user.4.10-pre1
tmp/: img.mpg
